--- a/deploy/csi-nodeplugin-nfusrplugin.yaml
+++ b/deploy/csi-nodeplugin-nfusrplugin.yaml
@@ -37,7 +37,7 @@ spec:
             capabilities:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
-          image: quay.io/quamotion/nfusr-csi:latest
+          image: quay.io/quamotion/nfusr-csi:0.1
           args :
             - "--nodeid=$(NODE_ID)"
             - "--endpoint=$(CSI_ENDPOINT)"
